--- a/themes/coHub/layouts/partials/footer.html
+++ b/themes/coHub/layouts/partials/footer.html
@@ -2,10 +2,11 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-6 col-md-12">
-        <div class="footer-logo">
+        {{/* <div class="footer-logo">
           <img src="{{ .Site.Params.footerlogo | absURL}}" alt="logo">
-        </div>
+        </div> */}}
         <p class="footer-description">
+        For more Info please visit the official NCC website at <a href="indiancc.nic.in">indiancc.nic.in</a> to learn more about NCC.
           {{ .Site.Params.footerDescription}}
         </p>
         <div class="footer-text-block">
