--- a/themes/coHub/layouts/partials/hero.html
+++ b/themes/coHub/layouts/partials/hero.html
@@ -5,7 +5,7 @@
       <div class="col-lg-12">
         <div class="hero-content">
           <h1>{{.title | safeHTML}}</h1>
-          <p>{{.subtitle}}</p>
+          <p>{{.subtitle | safeHTML}}</p>
         </div>
       </div>
     </div>
