Fix footer link

--- a/themes/coHub/layouts/partials/footer.html
+++ b/themes/coHub/layouts/partials/footer.html
@@ -6,7 +6,7 @@
           <img src="{{ .Site.Params.footerlogo | absURL}}" alt="logo">
         </div> */}}
         <p class="footer-description">
-        For more Info please visit the official NCC website at <a href="indiancc.nic.in">indiancc.nic.in</a> to learn more about NCC.
+        For more Info please visit the official NCC website at <a href="https://indiancc.nic.in">indiancc.nic.in</a> to learn more about NCC.
           {{ .Site.Params.footerDescription}}
         </p>
         <div class="footer-text-block">
