remove redundant styles

--- a/themes/coHub/layouts/enrollment/list.html
+++ b/themes/coHub/layouts/enrollment/list.html
@@ -1,25 +1,22 @@
 {{ define "main"}}
-<section class="about">
+<section class="enrollment">
   <div class="container">
     <div class="row">
       <div class="col-lg-12">
         <div class="page-header">
           <h2>{{ .Title}}</h2>
-          <div class="container">
-            <div class="row">
-              <div class="col-sm-12">
-                <iframe
-                  src="https://docs.google.com/forms/d/e/1FAIpQLSdd3t2DhVwkB7O7wDUpdxZAK9AtsRLIXeOVvMJEDlO0mvEmWQ/viewform?embedded=true"
-                  width="96%"
-                  height="800"
-                  frameborder="0"
-                  marginheight="0"
-                  marginwidth="0"
-                  >Loading…</iframe
-                >
-              </div>
-            </div>
-          </div>
+          <br />
+          <br />
+          <br />
+          <iframe
+            src="https://docs.google.com/forms/d/e/1FAIpQLSdd3t2DhVwkB7O7wDUpdxZAK9AtsRLIXeOVvMJEDlO0mvEmWQ/viewform?embedded=true"
+            width="96%"
+            height="800"
+            frameborder="0"
+            marginheight="0"
+            marginwidth="0"
+            >Loading…</iframe
+          >
         </div>
       </div>
     </div>
