--- a/themes/coHub/layouts/enrollment/list.html
+++ b/themes/coHub/layouts/enrollment/list.html
@@ -8,6 +8,13 @@
           <br />
           <br />
           <br />
+          <br />
+          <br />
+          <h4>Enrollments will be open soon.</h4>
+          <br />
+          <br />
+          <br />
+          {{/*
           <iframe
             src="https://docs.google.com/forms/d/e/1FAIpQLSdd3t2DhVwkB7O7wDUpdxZAK9AtsRLIXeOVvMJEDlO0mvEmWQ/viewform?embedded=true"
             width="96%"
@@ -17,6 +24,7 @@
             marginwidth="0"
             >Loading…</iframe
           >
+          */}}
         </div>
       </div>
     </div>
