--- a/themes/coHub/layouts/gallery/list.html
+++ b/themes/coHub/layouts/gallery/list.html
@@ -11,7 +11,8 @@
             title="Exibhition 01"
           >
             <img src="{{ .image | absURL }}" alt="gallery-images" />
-            <video src="{{ .video | video.MP4 }}" alt="gallery-images"></video>
+            <video src="{{ .video | video.MP4 }}" alt="gallery-images"> 
+            </video>
           </a>
         </div>
       </div>
